--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ Refercence: https://www.w3schools.com/bootstrap/tryit.asp?filename=trybs_temp_po
       <img src="./images/PasswordGenerator.jpg" class="img-responsive" style="width:100%" height="200" alt="Image">
     </div>
     <div class="col-sm-3"> 
-      <h4>Password Generator</h4>
+      <h4>Pin It</h4>
       <a href="https://pin-it-app-project.herokuapp.com/" class="material-icons">link</a>
       <a href="https://github.com/AlejandroBahSan/Pin-it/tree/main/Assets" class="material-icons"> assessment</a>
       <img src="./images/Pint-It.jpg" class="img-responsive" style="width:100%" height="200" alt="Image">
