--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ Refercence: https://www.w3schools.com/bootstrap/tryit.asp?filename=trybs_temp_po
       <h4>Pin It</h4>
       <a href="https://pin-it-app-project.herokuapp.com/" class="material-icons">link</a>
       <a href="https://github.com/AlejandroBahSan/Pin-it/tree/main/Assets" class="material-icons"> assessment</a>
-      <img src="./images/Pint-It.jpg" class="img-responsive" style="width:100%" height="200" alt="Image">
+      <img src="./images/PintIt.jpg" class="img-responsive" style="width:100%" height="200" alt="Image">
     </div>
     </div>
   </div>
@@ -174,26 +174,25 @@ Refercence: https://www.w3schools.com/bootstrap/tryit.asp?filename=trybs_temp_po
 <div class="container-fluid bg-3 text-center">    
   <div class="row">
     <div class="col-sm-3">
-      <p>Some text..</p>
-      <!-- <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"> -->
+      <h4>Regex Tutorial</h4>
+      <a href="https://gist.github.com/macosta2015/e2a85000e1bc381becb0a5765ecb51bc" class="material-icons">link</a>
+      <!-- <a href="https://github.com/AlejandroBahSan/Pin-it/tree/main/Assets" class="material-icons"> assessment</a> -->
+      <img src="./images/Regextutorial.jpg" class="img-responsive" style="width:100%" height="200" alt="Image">
     </div>
     <div class="col-sm-3"> 
       <p>Future projects..</p>
-      <!-- <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"> -->
     </div>
     <div class="col-sm-3"> 
       <p>Future projects..</p>
-      <!-- <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"> -->
     </div>
     <div class="col-sm-3">
       <p>Future projects..</p>
-      <!-- <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"> -->
     </div>
   </div>
 </div><br><br>
 
 <dive id="About">
-  <img src="./images/profile.jpg" alt="Nature" class="responsive" width="30" height="20">
+  <img src="./images/profile.jpg" alt="Avatar" class="center" >
 </dive>
 
 <a href="https://github.com/macosta2015" class="fa fa-github"></a>
